@@ -1,3 +1,7 @@
+2009-05-08  higepon  <higepon@users.sourceforge.jp>
+
+        * Bignum.h : Added Integer class.
+
 2009-05-07  higepon  <higepon@users.sourceforge.jp>
 
         * ByteVector.h (scheme): Fiexd strct-aliasing problems.
